@@ -1,3 +1,21 @@
+/*-
+ * #START_LICENSE#
+ * smp-server-library
+ * %%
+ * Copyright (C) 2017 - 2024 European Commission | eDelivery | DomiSMP
+ * %%
+ * Licensed under the EUPL, Version 1.2 or – as soon they will be approved by the European Commission - subsequent
+ * versions of the EUPL (the "Licence");
+ * You may not use this work except in compliance with the Licence.
+ * You may obtain a copy of the Licence at:
+ * 
+ * [PROJECT_HOME]\license\eupl-1.2\license.txt or https://joinup.ec.europa.eu/collection/eupl/eupl-text-eupl-12
+ * 
+ * Unless required by applicable law or agreed to in writing, software distributed under the Licence is
+ * distributed on an "AS IS" basis, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the Licence for the specific language governing permissions and limitations under the Licence.
+ * #END_LICENSE#
+ */
 package eu.europa.ec.edelivery.smp.utils;
 
 import eu.europa.ec.edelivery.security.utils.SecurityUtils;
@@ -67,12 +85,12 @@ public class SessionSecurityUtils {
         SecurityUtils.Secret secret = getAuthenticationSecret();
         if (secret == null) {
             // try to convert to long value
-            return new Long(id);
+            return Long.valueOf(id);
         }
         String decVal = SecurityUtils.decryptUrlSafe(secret, id);
         int indexOfSeparator = decVal.indexOf('#');
         String value = indexOfSeparator > -1 ? decVal.substring(0, indexOfSeparator) : decVal;
-        return new Long(value);
+        return Long.valueOf(value);
     }
 
     public static Authentication getSessionAuthentication() {
@@ -121,6 +139,19 @@ public class SessionSecurityUtils {
         LOG.warn("Authentication class [{}] is not session enabled class types: [{}]!", authentication.getClass(),
                 getSessionAuthenticationClasses().stream().map(Class::getName).collect(Collectors.toList()));
         return null;
+    }
+
+    public static Long getSessionUserId() {
+        SMPUserDetails smpUserDetails = getSessionUserDetails();
+        if (smpUserDetails == null) {
+            LOG.warn("No SMPUserDetails object!");
+            return null;
+        }
+        if (smpUserDetails.getUser() == null) {
+            LOG.warn("No User object in SMPUserDetails!");
+            return null;
+        }
+        return smpUserDetails.getUser().getId();
     }
 
     public static SecurityUtils.Secret getAuthenticationSecret() {
